--- a/css/charisma-app.css
+++ b/css/charisma-app.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Shojumaru);
-
 select{
 background-color:#fff;
 }
@@ -343,15 +341,15 @@ margin-right:-2px;
 margin-left:-2px;
 }
 .brand{
-font-family: 'Shojumaru', cursive, Arial, serif; 
 letter-spacing:2px;
 text-shadow:1px 1px 5px rgba(0, 0, 0, 0.5);
 width:166px;
 }
 .brand img{
 float:left;
-height:20px;
-width:20px;
+height:40px;
+width:40px;
+border-radius: 5px;
 margin-right:5px;
 }
 .brand span{
